// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header using Theme Font Family should return a Header object with a custom font family 1`] = `
.c0 {
  color: inherit;
  background-color: transparent;
  font-family: "DejaVu Sans Mono","Bitstream Vera Sans Mono",Courier;
  font-size: 2.5rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin: 0 0 1rem;
}

<h1
  className="c0"
>
  Lorem Ipsum
</h1>
`;

exports[`Header using Theme color should return a Header object with custom color 1`] = `
.c0 {
  color: hsl(313,67.8%,47.5%);
  background-color: hsl(305,33.9%,23.7%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 2.5rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  margin: 0 0 1rem;
}

<h1
  className="c0"
>
  Lorem Ipsum
</h1>
`;
